# OpenSource_HW1

./: .gitignore  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/: pull_request_template.md
docs/: component.md  documentation.md
src/: __init__.py
src/calculator/: __init__.py  api.py  calculator.py  pyproject.toml
src/calculator/tests/: __init__.py  test_calculator.py
src/logger/: __init__.py  api.py  logger.py  pyproject.toml
src/logger/tests/: __init__.py  test_logger.py
src/notifier/: __init__.py  api.py  notifier.py  pyproject.toml
src/notifier/tests/: __init__.py  test_notifier.py
tests/end_to_end_tests/: test_end_to_end.py
tests/integration_tests/: test_integration_calculator_logger.py  test_integration_logger_notifier.py
